[package]
name = "lazrs"
version = "0.8.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
edition = "2021"
license = "MIT"
description = "Python bindings for laz-rs"
readme = "README.md"

[lib]
name = "lazrs"
crate-type = ["cdylib"]

[dependencies.laz]
version = "0.11.0"
features = ["parallel"]

[dependencies.pyo3]
version = "0.26.0"
features = ["extension-module", "py-clone"]
